@@ -1,8 +1,6 @@
 package org.example.pges.service.impl;
 
 import cn.hutool.core.collection.CollUtil;
-import cn.hutool.core.date.DateUtil;
-import cn.hutool.core.util.NumberUtil;
 import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import org.apdplat.word.WordSegmenter;
 import org.apdplat.word.segmentation.SegmentationAlgorithm;
@@ -11,20 +9,21 @@ import org.apdplat.word.segmentation.WordRefiner;
 import org.example.pges.constance.IndexNumConst;
 import org.example.pges.constance.NodeCodeConst;
 import org.example.pges.constance.NumConst;
-import org.example.pges.dao.BusinessMapper;
+import org.example.pges.dao.DocumentMapper;
 import org.example.pges.dao.ESMapper;
 import org.example.pges.entity.TextDTO;
-import org.example.pges.entity.dto.SearchParamDTO;
-import org.example.pges.entity.dto.WordSegementDTO;
-import org.example.pges.entity.po.BusinessPO;
-import org.example.pges.entity.po.ESIndexPo;
+import org.example.pges.entity.dto.SearchParam;
+import org.example.pges.entity.dto.WordSegement;
+import org.example.pges.entity.po.Document;
+import org.example.pges.entity.po.ESIndex;
+import org.example.pges.entity.po.ItemNode;
 import org.example.pges.service.ESService;
 import org.example.pges.utils.ESDataTypeUtils;
 import org.example.pges.utils.ESDateUtils;
 import org.example.pges.utils.IdGenerator;
+import org.example.pges.utils.IndexBuilder;
 import org.springframework.stereotype.Service;
 import org.springframework.util.CollectionUtils;
-import org.springframework.util.NumberUtils;
 
 import javax.annotation.Resource;
 import java.util.*;
@@ -45,7 +44,7 @@ public class ESServiceImpl implements ESService {
     ESMapper esMapper;
 
     @Resource
-    BusinessMapper businessMapper;
+    DocumentMapper documentMapper;
 
     @Override
     public List<String> insert(TextDTO textDTO) {
@@ -63,132 +62,135 @@ public class ESServiceImpl implements ESService {
     @Override
     public Object process() {
         //获取待处理的病历数据
-        List<BusinessPO> byOffset = businessMapper.findByOffset(IndexNumConst.MAX_COUNT);
+        List<Document> byOffset = documentMapper.findByOffset(IndexNumConst.MAX_COUNT);
         if(CollUtil.isEmpty(byOffset)){
             return null;
         }
         //存储key -> id集合
-        Map<String,List<BusinessPO>> map = new HashMap<>(16);
-        for (BusinessPO businessPO : byOffset) {
-            String contentText = businessPO.getContentText();
-            List<String> seg = WordSegmenter.seg(contentText).stream().map(Word::getText).collect(Collectors.toList());
-            seg = seg.stream().distinct().collect(Collectors.toList());
+        Map<String,List<Document>> wordToDocsMap = new HashMap<>(16);
+
+        for (Document document : byOffset) {
+            String contentText = document.getContentText();
+            List<String> seg = WordSegmenter.seg(contentText).stream().map(Word::getText).distinct().toList();
             for (String word : seg) {
-                List<BusinessPO> idList = map.getOrDefault(word, new ArrayList<>());
-                idList.add(businessPO);
-                map.put(word,idList);
+                List<Document> idList = wordToDocsMap.getOrDefault(word, new ArrayList<>());
+                idList.add(document);
+                wordToDocsMap.put(word,idList);
             }
         }
 
         //更新索引数据库
-        List<ESIndexPo> insertList = new ArrayList<>();
-        List<ESIndexPo> updateList = new ArrayList<>();
-        for(String key : map.keySet()){
-            List<BusinessPO> list = map.get(key);
+        List<ESIndex> insertList = new ArrayList<>();
+        List<ESIndex> updateList = new ArrayList<>();
+
+        for(String word : wordToDocsMap.keySet()){
+            List<Document> list = wordToDocsMap.get(word);
             //判断当前key是否存在
-            int hasIndex = esMapper.hasIndex(key, NodeCodeConst.B1014);
+            int hasIndex = esMapper.hasIndex(word, NodeCodeConst.B1014);
             if(hasIndex == 0){
-                firstInsert(key, list,insertList);
+                firstInsert(word, list,insertList);
             }else{
                 //对于已经存在的key，需要判断数据库中的时间段是否包含当前时间段
                 QueryWrapper queryWrapper = new QueryWrapper();
                 queryWrapper.eq("code",NodeCodeConst.B1014);
-                queryWrapper.eq("word",key);
-                List<ESIndexPo> byWordAndCode = esMapper.selectList(queryWrapper);
+                queryWrapper.eq("word",word);
+                List<ESIndex> byWordAndCode = esMapper.selectList(queryWrapper);
                 
                 //处理所有日期在当前时间段之内的数据
-                for (ESIndexPo esIndexPo : byWordAndCode) {
-                    List<BusinessPO> currentDateIntervalBussinessData = list.stream().filter(e -> ESDateUtils.between(esIndexPo.getBeginTime(), esIndexPo.getEndTime(), e.getCreateTime())).collect(Collectors.toList());
+                for (ESIndex esIndex : byWordAndCode) {
+                    List<Document> currentDateIntervalBussinessData = list.stream()
+                            .filter(e -> ESDateUtils.between(esIndex.getBeginTime(), esIndex.getEndTime(), e.getCreateTime()))
+                            .collect(Collectors.toList());
                     if(CollUtil.isEmpty(currentDateIntervalBussinessData)){
                         continue;
                     }
-                    List<Long> businessIds = currentDateIntervalBussinessData.stream().map(BusinessPO::getOutEmrDetailId).collect(Collectors.toList());
-                    Long[] newIds = ESDataTypeUtils.mergeArrayDistinct(esIndexPo.getIds(), ESDataTypeUtils.arrayListToArray(businessIds));
-                    esIndexPo.setIds(newIds);
+                    List<ItemNode> indexNodeList = esIndex.getIndexNodeList();
+                    if(indexNodeList != null){
+                        indexNodeList.addAll(IndexBuilder.buildIndexNodeList(word,currentDateIntervalBussinessData));
+                    }else{
+                        indexNodeList = IndexBuilder.buildIndexNodeList(word,currentDateIntervalBussinessData);
+                    }
+                    esIndex.setIndexNodeList(indexNodeList);
                     //插入到更新集合中
-                    updateList.add(esIndexPo);
+                    updateList.add(esIndex);
                     //排除掉已经处理的数据
                     list.removeAll(currentDateIntervalBussinessData);
                 }
                 //如果不存在新数据对应的时间段，则采取扩展策略，将其插入到数据库中
                 if(CollUtil.isNotEmpty(list)){
-                    firstInsert(key,list,insertList);
+                    firstInsert(word,list,insertList);
                 }
             }
         }
         esMapper.insert(insertList);
         esMapper.updateById(updateList);
-        List<Long> collect = byOffset.stream().map(BusinessPO::getOutEmrDetailId).collect(Collectors.toList());
+        List<Long> collect = byOffset.stream().map(Document::getOutEmrDetailId).collect(Collectors.toList());
         if(!CollectionUtils.isEmpty(collect)){
-            businessMapper.updateEsFlag(collect);
+            documentMapper.updateEsFlag(collect);
         }
-        process();
+//        process();
         return null;
     }
 
     /**
      * 首次插入数据
-     * @param key
-     * @param list
+     * @param key 关键词
+     * @param list 文档集合
+     * @param insertList 最终插入集合
      */
-    private void firstInsert(String key, List<BusinessPO> list,List<ESIndexPo> result) {
-        Map<Date[],List<Long>> map = new HashMap<>(16);
+    private void firstInsert(String key, List<Document> list, List<ESIndex> insertList) {
+        Map<Date[],List<Document>> map = new HashMap<>(16);
         //初始化时间Map,用于设置某个时间段内对应的所有业务id
-        for (BusinessPO businessPO : list) {
-            Date[] dateSegment = ESDateUtils.getDateSegment(businessPO.getCreateTime());
+        for (Document document : list) {
+            Date[] dateSegment = ESDateUtils.getDateSegment(document.getCreateTime());
             if(null == dateSegment){
                 continue;
             }
-            List<Long> orDefault = map.getOrDefault(dateSegment, new ArrayList<>());
-            orDefault.add(businessPO.getOutEmrDetailId());
+            List<Document> orDefault = map.getOrDefault(dateSegment, new ArrayList<>());
+            orDefault.add(document);
             map.put(dateSegment,orDefault);
         }
         for(Date[] date : map.keySet()){
-            ESIndexPo esIndexPo = new ESIndexPo().setWord(key)
+            List<Document> documents = map.getOrDefault(date, new ArrayList<>());
+            ESIndex esIndex = new ESIndex().setWord(key)
                     .setBeginTime(date[0])
                     .setEndTime(date[1])
                     .setCode(NodeCodeConst.B1014)
                     .setId(IdGenerator.generateId())
-                    .setIds(map.getOrDefault(date,new ArrayList<>()).toArray(new Long[0]));
-            result.add(esIndexPo);
+                    .setIndexNodeList(IndexBuilder.buildIndexNodeList(key, documents));
+            insertList.add(esIndex);
         }
     }
 
     /**
      * 实现关键词检索功能
-     * @param searchParamDTO
-     * @return {@link List }<{@link BusinessPO }>
+     * @param searchParam
+     * @return {@link List }<{@link Document }>
      */
 
     @Override
-    public List<BusinessPO> searchAll(SearchParamDTO searchParamDTO) {
+    public List<Document> searchAll(SearchParam searchParam) {
         //检索条件处理
         //searchParamDTO.setText(splitSearchWord(searchParamDTO.getText()));
         //处理时间段
-        List<BusinessPO> businessPOS = esMapper.searchByParam(searchParamDTO);
-        return businessPOS;
+        List<Document> documents = esMapper.searchByParam(searchParam);
+        return documents;
     }
 
     /**
      * 分页查询
-     * @param searchParamDTO
-     * @return {@link List }<{@link BusinessPO }>
+     * @param searchParam
+     * @return {@link List }<{@link Document }>
      */
 
     @Override
-    public List<BusinessPO> searchByPage(SearchParamDTO searchParamDTO) {
+    public List<Document> searchByPage(SearchParam searchParam) {
         return null;
     }
 
     @Override
-    public List<WordSegementDTO> test(String word) {
-        List<WordSegementDTO> result = new ArrayList<>();
-        //
-        List<Word> seg = WordSegmenter.seg(word, SegmentationAlgorithm.MaxNgramScore);
-        WordSegementDTO MinimalWordCount = new WordSegementDTO();
-        MinimalWordCount.setWordAlgorithm(SegmentationAlgorithm.MinimalWordCount.getDes());
-        MinimalWordCount.setWords(seg.stream().map(Word::getText).collect(Collectors.toList()));
-        result.add(MinimalWordCount);
+    public List<WordSegement> test(String word) {
+        List<WordSegement> result = new ArrayList<>();
         return result;
     }
 
@@ -202,21 +204,21 @@ public class ESServiceImpl implements ESService {
         QueryWrapper queryWrapper = new QueryWrapper();
         queryWrapper.eq("code",NodeCodeConst.B1014);
         queryWrapper.in("word",leastIndex);
-        List<ESIndexPo> list = esMapper.selectList(queryWrapper);
+        List<ESIndex> list = esMapper.selectList(queryWrapper);
         if(CollUtil.isEmpty(list)){
             return;
         }
         //分组出相同word
-        Map<String, List<ESIndexPo>> wordMap = list.stream().collect(Collectors.groupingBy(ESIndexPo::getWord));
+        Map<String, List<ESIndex>> wordMap = list.stream().collect(Collectors.groupingBy(ESIndex::getWord));
         List<Long> removeIds = new ArrayList<>();
-        List<ESIndexPo> updateList = new ArrayList<>();
+        List<ESIndex> updateList = new ArrayList<>();
         for(String word : wordMap.keySet()){
-            List<ESIndexPo> esIndexPos = wordMap.get(word);
-            esIndexPos = esIndexPos.stream()
-                    .sorted(Comparator.comparing(ESIndexPo::getBeginTime))
+            List<ESIndex> esIndices = wordMap.get(word);
+            esIndices = esIndices.stream()
+                    .sorted(Comparator.comparing(ESIndex::getBeginTime))
                     .collect(Collectors.toList());
-            mergeIndex(esIndexPos,removeIds);
-            updateList.addAll(esIndexPos);
+            mergeIndex(esIndices,removeIds);
+            updateList.addAll(esIndices);
         }
         esMapper.updateById(updateList);
         if(CollUtil.isNotEmpty(removeIds)){
@@ -228,20 +230,20 @@ public class ESServiceImpl implements ESService {
      * 索引合并
      */
 
-    private void mergeIndex(List<ESIndexPo> esIndexPoList,List<Long> removedIds){
-        if(esIndexPoList.size() < NumConst.INT_2){
+    private void mergeIndex(List<ESIndex> esIndexList, List<Long> removedIds){
+        if(esIndexList.size() < NumConst.INT_2){
             return;
         }
-        ESIndexPo first = esIndexPoList.get(0);
-        ESIndexPo second = esIndexPoList.get(1);
+        ESIndex first = esIndexList.get(0);
+        ESIndex second = esIndexList.get(1);
         if(first.getIds().length + second.getIds().length < IndexNumConst.MAX_LENGTH){
             Long[] firstIds = first.getIds();
             Long[] secondIds = second.getIds();
             Long[] ids = ESDataTypeUtils.mergeArrayDistinct(firstIds, secondIds);
             second.setIds(ids).setBeginTime(first.getBeginTime());
             removedIds.add(first.getId());
-            esIndexPoList.remove(0);
-            mergeIndex(esIndexPoList,removedIds);
+            esIndexList.remove(0);
+            mergeIndex(esIndexList,removedIds);
         }
     }
 
